--- a/pggearman.sql.in
+++ b/pggearman.sql.in
@@ -9,24 +9,24 @@ SET search_path = public;
 
 -- $1 = server hostname - TEXT
 CREATE OR REPLACE FUNCTION gman_servers_set(TEXT) RETURNS BOOL
-AS 'MODULE_PATHNAME', 'gman_servers_set' LANGUAGE 'C' STRICT;
+AS 'MODULE_PATHNAME', 'gman_servers_set' LANGUAGE C STRICT;
 
 -- $1 = function - TEXT
 -- $2 = workload - TEXT
 CREATE OR REPLACE FUNCTION gman_do(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do' LANGUAGE C;
 
 CREATE OR REPLACE FUNCTION gman_do_high(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do_high' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do_high' LANGUAGE C;
 
 CREATE OR REPLACE FUNCTION gman_do_low(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do_low' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do_low' LANGUAGE C;
 
 CREATE OR REPLACE FUNCTION gman_do_background(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do_background' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do_background' LANGUAGE C;
 
 CREATE OR REPLACE FUNCTION gman_do_high_background(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do_high_background' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do_high_background' LANGUAGE C;
 
 CREATE OR REPLACE FUNCTION gman_do_low_background(TEXT, TEXT) RETURNS TEXT
-AS 'MODULE_PATHNAME', 'gman_do_low_background' LANGUAGE 'C';
+AS 'MODULE_PATHNAME', 'gman_do_low_background' LANGUAGE C;
